syntax = "proto3";

package auth;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package                      = "gen";
option (gogoproto.marshaler_all)       = true;
option (gogoproto.sizer_all)           = true;
option (gogoproto.unmarshaler_all)     = true;
option (gogoproto.goproto_getters_all) = false;

message Authed{
	string session_id = 1 [ (gogoproto.customname) = "SessionID" ] ;
}

//TODO(taco) implment auth
service AuthService { rpc Auth(google.protobuf.Empty) returns (Authed); }

